# postgresql2websocket

./: .gitignore  README.md  console.html  postgresql2websocket.conf.example  postgresql2websocket.py  pyproject.toml  requirements.txt
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: codeql.yml
examples/: console.html
tests/: package-lock.json  package.json  websocket_client.js
tests/sql/: setup_1_function.sql  setup_2_table.sql  setup_3_trigger.sql  test_insert.sql  test_upsert.sql
