[tool.poetry]
name = "postgresql2websocket"
version = "0.1.0"
description = "Send PostgreSQL notifications over websockets"
authors = ["Francesco Frassinelli <fraph24@gmail.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.5.3"
asyncpg = "^0.21.0"
aiohttp = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
